writing user activation function
