# Social/cmd/api/auth.go
@@ -15,7 +15,6 @@ type RegisterUserPayload struct {
 	Password string `json:"password" validate:"required,min=8,max=255"`
 }
 
-
 type registerUserHandlerResponse = SuccessResponse[store.User]
 
 // registerUserHandler godoc
@@ -26,63 +25,63 @@ type registerUserHandlerResponse = SuccessResponse[store.User]
 //	@Accept			json
 //	@Produce		json
 //	@Param			payload	body		RegisterUserPayload	true	"User credentials"
-//	@Success		201		{object}	SuccessResponse
+//	@Success		201		{object}	registerUserHandlerResponse
 //	@Failure		400		{object}	ErrorResponseWrapper
 //	@Failure		500		{object}	ErrorResponseWrapper
 //	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 
 	var payload RegisterUserPayload
-	if err := readJson(w,r, &payload); err != nil {
-		app.badRequestError(w,r,err)
-		return 
+	if err := readJson(w, r, &payload); err != nil {
+		app.badRequestError(w, r, err)
+		return
 	}
 
 	if err := Validate.Struct(payload); err != nil {
-		app.badRequestError(w,r,err)
-		return 
+		app.badRequestError(w, r, err)
+		return
 	}
 
 	user := &store.User{
 		Username: payload.Username,
-		Email: payload.Email,
+		Email:    payload.Email,
 	}
 
-	//has the password 
-	if  err := user.Password.Set(payload.Password); err != nil {
-		app.internalServerError(w,r,err)
+	//has the password
+	if err := user.Password.Set(payload.Password); err != nil {
+		app.internalServerError(w, r, err)
 		return
 	}
 
 	ctx := r.Context()
 	plainToken := uuid.New().String()
 
-	//we will hash the token for email, but keep plain token for email 
-	hash :=  sha256.Sum256([]byte(plainToken))
+	//we will hash the token for email, but keep plain token for email
+	hash := sha256.Sum256([]byte(plainToken))
 	hashToken := hex.EncodeToString(hash[:])
 
-	//Store tthe user 
-	if err := app.store.Users.CreateAndInvite(ctx, user, hashToken , app.config.mail.exp); err != nil {
+	//Store tthe user
+	if err := app.store.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp); err != nil {
 		switch err {
 		case store.ErrDuplicateEmail:
-			app.badRequestError(w,r,err)
+			app.badRequestError(w, r, err)
 		case store.ErrDuplicateUsername:
-			app.badRequestError(w,r,err)
-		default: 
-			app.internalServerError(w,r,err)
+			app.badRequestError(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
 		}
 		return
 	}
 
-	//we will send mail 
+	//we will send mail
 	data := map[string]any{
-		"env":app.config.env,
-		"message":user,
-		"status":"true",
+		"env":     app.config.env,
+		"message": user,
+		"status":  "true",
 	}
 
-	if err := writeJson(w, http.StatusCreated,data); err != nil {
-		app.internalServerError(w,r,err)
+	if err := writeJson(w, http.StatusCreated, data); err != nil {
+		app.internalServerError(w, r, err)
 		return
 	}
 
