# Social/docs/swagger.yaml
@@ -38,6 +38,23 @@ definitions:
         example: false
         type: boolean
     type: object
+  main.RegisterUserPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 255
+        minLength: 8
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
   main.UpdatePostPayload:
     properties:
       content:
@@ -92,6 +109,17 @@ definitions:
         items:
           $ref: '#/definitions/store.PostWithMetaData'
         type: array
+      status:
+        example: true
+        type: boolean
+    type: object
+  main.registerUserHandlerResponse:
+    properties:
+      env:
+        example: development
+        type: string
+      message:
+        $ref: '#/definitions/store.User'
       status:
         example: true
         type: boolean
@@ -188,6 +216,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -203,6 +233,36 @@ info:
   termsOfService: http://swagger.io/terms/
   title: GopherSocial API (Social Media)
 paths:
+  /authentication/user:
+    post:
+      consumes:
+      - application/json
+      description: Registers a user
+      parameters:
+      - description: User credentials
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.registerUserHandlerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+      summary: Registers a user
+      tags:
+      - authentication
   /comments:
     post:
       consumes:
@@ -547,6 +607,35 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: UnFollow a user profile
+      tags:
+      - users
+  /users/activate/{token}:
+    post:
+      description: Activates/Register a user by invitation token
+      parameters:
+      - description: Invitation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User activated
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+      security:
+      - ApiKeyAuth: []
+      summary: Activates/Register a user
       tags:
       - users
   /users/feed:
